# lucia_description

./: CMakeLists.txt  README.md  model.config  package.xml
install/: local_setup.sh  setup.sh
install/lucia_bringup/share/ament_index/resource_index/package_run_dependencies/: lucia_bringup
install/lucia_bringup/share/lucia_bringup/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/lucia_bringup/share/lucia_bringup/cmake/: lucia_bringupConfig.cmake
install/lucia_description/share/lucia_description/: package.bash  package.zsh
launch/: display.launch.py  robot.launch.py
log/: latest_build
lucia_bringup/: CMakeLists.txt
lucia_bringup/config/: noimu_lds_2d.lua
lucia_bringup/launch/: bringup.launch.py
lucia_bringup/param/: lucia.yaml
lucia_bringup/src/: odom.py
lucia_cartographer/: CMakeLists.txt  frames_2024-11-23_12.47.49.gv  frames_2025-01-24_18.04.49.gv  package.xml
lucia_cartographer/config/: lucia_lds_2d.lua
lucia_cartographer/launch/: cartgrapher.launch.py  cartgrapher_test.launch.py
lucia_description/: CMakeLists.txt  package.xml
lucia_description/launch/: robot.launch.py
lucia_description/urdf/: lucia.urdf
lucia_description_loader/: lucia_desscription_loader.py
lucia_localization/: CMakeLists.txt  package.xml
lucia_localization/config/: ekf.yaml
lucia_localization/launch/: ekf.launch.py
src/: angle_to_joint_state.cpp
test/: test_robot_description_loader.py
tf2_tools_view/: frames_2025-04-10_23.50.48.gv
urdf/: common.xacro  lucia.urdf  lucia.urdf.xacro  my_robot.urdf
(+1 files in other folders)
